[tool.poetry]
name = "midterm-exam-4"
version = "0.1.0"
description = ""
authors = ["vincent <vincent@timepercentcorp.com>"]
readme = "README.md"
packages = [{include = "midterm_exam_4"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
